--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "php": "^7.4|^8.0",
     "ext-json": "*",
     "ext-curl": "*",
-    "laravel/framework": "~8.54"
+    "laravel/framework": "~8.54",
+    "magein/ext-common": "*@dev"
   }
 }
