--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
   "require": {
     "php": "^7.4|^8.0",
     "ext-json": "*",
-    "ext-curl": "*",
+    "ext-curl": "*"
+  },
+  "require-dev": {
     "laravel/framework": "~8.54"
   }
 }
